--- a/biblioteca_digital/views/templates/materiales/alta_material.html
+++ b/biblioteca_digital/views/templates/materiales/alta_material.html
@@ -81,6 +81,7 @@
 
 {% block extra_scripts %}
     <script src="{% static 'js/form_controler.js' %}" defer></script>
+    <script src="{% static 'js/form_altas.js' %}" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const tipoMaterial = document.getElementById('tipo_material');
