--- a/biblioteca_digital/libros/templates/libros/alta_multimedia.html
+++ b/biblioteca_digital/libros/templates/libros/alta_multimedia.html
@@ -1,28 +1,45 @@
-<div data-block="content">
-    <div data-form="multimedia">
-        <div class="row mb-3">
-            <div class="col-4">
-                <label for="profesor">Profesor:</label>
-                <input type="text" class="form-control" id="profesor" name="profesor" required placeholder="Nombre del profesor...">
-            </div>
-            <div class="col-4">
-                <label for="enlace">Enlace:</label>
-                <input type="url" class="form-control" id="enlace" name="enlace" required placeholder="URL del recurso...">
-            </div>
-            <div class="col-4">
-                <label for="carrera">Carrera:</label>
-                <input type="text" class="form-control" id="carrera" name="carrera" required placeholder="Nombre de la carrera...">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-6">
-                <label for="materia">Materia:</label>
-                <input type="text" class="form-control" id="materia" name="materia" required placeholder="Nombre de la materia...">
-            </div>
-            <div class="col-6">
-                <label for="titulo_contenido">Título del contenido:</label>
-                <input type="text" class="form-control" id="titulo_contenido" name="titulo_contenido" required placeholder="Título del contenido...">
-            </div>
+{% load static %}
+<div data-block="content" data-form-type="multimedia">
+    <div class="row mb-4">
+        <div class="col-md-2">
+            <label for="profesor">Profesor/a <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="profesor" name="profesor" 
+                   required placeholder="Nombre del profesor">
         </div>
     </div>
+    <div class="row mb-4">
+        <div class="col-md-2">
+            <label for="url">Ingresar enlace (URL) <span class="text-danger">*</span></label>
+            <div class="input-group">
+                <input type="url" class="form-control" id="url" name="url" required placeholder="URL del programa">
+            </div>
+        </div>
+        <div class="col-md-2">
+            <label for="carrera">Carrera <span class="text-danger">*</span></label>
+            <select class="form-select" id="carrera" name="carrera" required>
+                <option value="">Carrera</option>
+                <option value="carrera1">Analista en Sistemas</option>
+                <option value="carrera2">Historia</option>
+                <option value="carrera3">Enfermeria</option>
+            </select>
+        </div>
+        <div class="col-md-2">
+            <label for="materia">Materia <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="materia" name="materia" required placeholder="Nombre de la materia">
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-md-4">
+            <label for="titulo" class="form-label small">Titulo del contenido <span class="text-danger">*</span></label>
+            <input type="text" class="form-control form-control-sm" id="titulo" name="titulo" required>
+        </div>
+    </div>
+
+    <!-- Contenedor para los ejemplares -->
+    <div id="contenedor-ejemplares-multimedia" class="mb-4">
+        <!-- Los ejemplares se generarán aquí dinámicamente -->
+    </div>
 </div>
+<!-- Importación del JS dinámico de ejemplares -->
+<script src="{% static 'js/form_altas.js' %}"></script>
+<script src="{% static 'js/form_controller.js' %}"></script>
